--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#header">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#header">Bernda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" href="#about"></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#services">Services</a>
@@ -69,31 +69,30 @@
 
     <!-- Section 1: Header -->
     <section id="header" class="container-fluid p-5 bg-primary text-white text-center">
-        <h1>Welcome to Our Website</h1>
-        <p>This is a powerful Bootstrap 5 website.</p>
+        <h1>Selamat Datang</h1>
+        <p>Ini Adalah Website Kami</p>
     </section>
 
     <!-- Section 2: About -->
     <section id="about" class="container p-5">
-        <h2>About Us</h2>
-        <p>Learn more about our mission and services.</p>
+        <h2>Tentang Kami</h2>
+        <p>Perusahaan Santan</p>
     </section>
 
     <!-- Section 3: Services -->
     <section id="services" class="container-fluid p-5 bg-light">
-        <h2>Our Services</h2>
+        <h2>Menjual:</h2>
         <div class="row">
             <div class="col-md-4">
-                <h3>Service 1</h3>
-                <p>Description of service 1.</p>
+                <p>Santan Kelapa</p>
+                <p></p>
             </div>
             <div class="col-md-4">
-                <h3>Service 2</h3>
-                <p>Description of service 2.</p>
+                <h3></h3>
+                <p>Kelapa Parut</p>
             </div>
             <div class="col-md-4">
-                <h3>Service 3</h3>
-                <p>Description of service 3.</p>
+                <p>Es Kelapa Muda</p>
             </div>
         </div>
     </section>
@@ -118,13 +117,13 @@
     <section id="video" class="container p-5">
         <h2>Watch Our Video</h2>
         <div class="embed-responsive embed-responsive-16by9">
-            <iframe width="1499" height="611" src="https://www.youtube.com/embed/qbh3j1gszkY" title="Story&#39; kocak Kelapa muda segar v80" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="100%" height="611" src="https://www.youtube.com/embed/qbh3j1gszkY" title="Story&#39; kocak Kelapa muda segar v80" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
     <!-- Section 6: Contact -->
     <section id="contact" class="container-fluid p-5 bg-dark text-white">
-        <h2>Contact Us</h2>
+        <h2>Hubungi Kami</h2>
         <form>
             <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
